...
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/rando"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutResponses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="60dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/response_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">
        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>
