<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_gravity="center_vertical"
    android:padding="30dp"
    android:backgroundTint="@color/green"
    android:background="#FFFFFF"
    >

    <!--Message-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inviteTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:textColor="@color/black" >

        <EditText
            android:id="@+id/inviteEt"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:hint="Write message here"
            android:inputType="textMultiLine"
            android:layout_gravity="center"
            android:background="@color/white"/>
        <Button
            android:id="@+id/submitInvite"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:textSize="10dp"
            android:text="Accept Invite"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>